--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,1 +1,10 @@
 /* Will be compiled down to a single stylesheet with your sass files */
+.bb-camera {
+  text-align: center;
+}
+#bb-camera-feed {
+  background: #EFEFEF;
+  border: 1px solid #CCC;
+  min-width: 640px;
+  min-height: 480px;
+}
