--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -16,6 +16,17 @@
   left: 0;
   z-index: 5;
 }
+.ng-camera-countdown {
+  text-align: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+.ng-camera-countdown p {
+  color: #FFF;
+  text-shadow: 0 2px 2px rgba(0, 0, 0, 0.8);
+}
 .ng-camera-overlay-controls {
   position: absolute;
   top: 0;
