--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -15,6 +15,18 @@
   z-index:5;
 }
 
+.ng-camera-countdown{
+  p{
+    color:#FFF;
+    text-shadow:0 2px 2px rgba(0,0,0, .8);
+  }
+  text-align:center;
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+}
+
 .ng-camera-overlay-controls{
   position:absolute;
   top:0; right:10px;
@@ -34,7 +46,6 @@
 }
 
 #ng-photo-canvas{}
-
 
 .ng-photo-output{
   clear:both;
