--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -27,10 +27,7 @@
   width:100%;
 }
 
-.ng-camera-overlay-controls{
-  position:absolute;
-  top:0; right:10px;
-  z-index:10;
+.ng-camera-controls{
 }
 
 #ng-camera-feed{
