--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -18,11 +18,13 @@
 .ng-camera-countdown{
   p{
     color:#FFF;
+    font-size:48px;
+    font-weight:bold;
     text-shadow:0 2px 2px rgba(0,0,0, .8);
   }
   text-align:center;
   position:absolute;
-  top:0;
+  top:216px;
   left:0;
   width:100%;
 }
